<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        tools:showIn="@layout/activity_quick_check" android:layout_height="match_parent" android:layout_width="match_parent"
    android:id="@+id/layout_qc_time" layout_height="match_parent" layout_width="match_parent">
    <!-- FRAGE 2: Zeit -->
    <TextView
        android:id="@+id/text_question_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_for_time"
        style="@style/NormalText" />





        <TextView
            android:id="@+id/text_time_label_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kurz_1_4_min"
            style="@style/SelectionButton" />

        <TextView
            android:id="@+id/text_time_label_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium_time"
            style="@style/SelectionButton" />

        <TextView
            android:id="@+id/text_time_label_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/long_time"
            style="@style/SelectionButton"
           />




</LinearLayout>