<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">


    <TextView
        android:id="@+id/text_summary_durations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_00_00"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:paddingBottom="24dp" />





    <TextView
        android:id="@+id/ignore_overtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ignore_overtime"
        android:visibility="gone"
        style="@style/TextLinkButton"/>

    <!-- Innere Zustand NACH der Meditation -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <!-- Speicher-Buttons -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        style="@style/ActionButton"/>


    <Button
        android:id="@+id/button_skip_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nicht_speichern"
        style="@style/TextLinkButton" />


</LinearLayout>