<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FramePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_practice_header"
        style="@style/ActivityHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_practice" />

    <!-- Page 1: Details -->
    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error_text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_practice_name"
            style="@style/FormInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_practice_name_hint" />

        <EditText
            android:id="@+id/edit_practice_description"
            style="@style/FormInputMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:lines="6"
            android:hint="@string/add_practice_description_hint" />

        <EditText
            android:id="@+id/edit_practice_durations"
            style="@style/DurationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/add_practice_durations_hint" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_save_details"
            style="@style/ActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speichern"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_next"
                style="@style/TextLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weiter" />

            <Button
                android:id="@+id/button_cancel_details"
                style="@style/TextLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/abbrechen" />
        </LinearLayout>

    </LinearLayout>

    <!-- Page 2: Instructions -->
    <LinearLayout
        android:id="@+id/instructions_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_text_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_practice_instruction"
            style="@style/FormInputMultiLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/add_practice_instruction_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save_practice"
                style="@style/ActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speichern" />

            <Button
                android:id="@+id/button_delete_practice"
                style="@style/ActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back_instructions"
                style="@style/TextLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous_page" />

            <Button
                android:id="@+id/button_cancel_instructions"
                style="@style/TextLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/abbrechen" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>